Fixed shader implementation

--- a/GreenScreen/CMakeLists.txt
+++ b/GreenScreen/CMakeLists.txt
@@ -25,6 +25,8 @@ add_executable (GreenScreen
 	main.cpp
 	renderer.h
 	test_pyramid.h
+	VertexShader.h
+	PixelShader.h
 	${VERTEX_SHADERS}
 	${PIXEL_SHADERS}
 )
