Add Renderable.h to project (work in progress) Add cleanup function in main.cpp marked row 37 as completed in rubric

--- a/GreenScreen/CMakeLists.txt
+++ b/GreenScreen/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable (GreenScreen
 	test_pyramid.h
 	VertexShader.h
 	PixelShader.h
+	Renderable.h
 	${VERTEX_SHADERS}
 	${PIXEL_SHADERS}
 )
