Geometry shader stuff that is being worked on

--- a/GreenScreen/CMakeLists.txt
+++ b/GreenScreen/CMakeLists.txt
@@ -15,6 +15,7 @@ set(VERTEX_SHADERS
 	SkyBoxVertexShader.hlsl
 	InstanceVertexShader.hlsl
 	VertexShader.hlsl
+	Seaweed.hlsl
 	Wave_VS.hlsl
 )
 set(PIXEL_SHADERS 
@@ -22,6 +23,10 @@ set(PIXEL_SHADERS
 	SkyBoxPixelShader.hlsl
 	InstancePixelShader.hlsl
 	PixelShader.hlsl
+)
+set(GEOMETRY_SHADERS 
+	# add geometry shader (.hlsl) files here
+	GeometryShader.hlsl
 )
 
 # Add any new C/C++ source code here
@@ -32,6 +37,7 @@ add_executable (GreenScreen
 	test_pyramid.h
 	VertexShader.h
 	PixelShader.h
+	SharedDefines.h
 	InstancePixelShader.h
 	InstanceVertexShader.h
 	SkyBoxPixelShader.h
@@ -45,6 +51,7 @@ add_executable (GreenScreen
 	Wave_VS.h
 	${VERTEX_SHADERS}
 	${PIXEL_SHADERS}
+	${GEOMETRY_SHADERS} 
 )
 
 # This code will tell visual studio to convert above shader .hlsl to .h files
@@ -57,6 +64,12 @@ set_source_files_properties( ${VERTEX_SHADERS} PROPERTIES
 )
 set_source_files_properties( ${PIXEL_SHADERS} PROPERTIES 
 	VS_SHADER_TYPE Pixel VS_SHADER_MODEL 5.0 VS_SHADER_ENTRYPOINT main 
+	VS_SHADER_OUTPUT_HEADER_FILE "%(RelativeDir)%(Filename).h"
+	VS_SHADER_VARIABLE_NAME "%(Filename)"
+	VS_SHADER_ENABLE_DEBUG $<$<CONFIG:Debug>:true>
+)
+set_source_files_properties( ${GEOMETRY_SHADERS} PROPERTIES 
+	VS_SHADER_TYPE Geometry VS_SHADER_MODEL 5.0 VS_SHADER_ENTRYPOINT main 
 	VS_SHADER_OUTPUT_HEADER_FILE "%(RelativeDir)%(Filename).h"
 	VS_SHADER_VARIABLE_NAME "%(Filename)"
 	VS_SHADER_ENABLE_DEBUG $<$<CONFIG:Debug>:true>
